# SC-CL

./: .gitignore  BuildTarget.h  CMakeLists.txt  Clang Changes Documentation.txt  ClangUtils.cpp  ClangUtils.h  CompilePC.cpp  CompilePC.h  Compiler.cpp  Compiler.h  ConstExpr.h  FunctionData.cpp  FunctionData.h  FunctionOpcode.cpp  FunctionOpcode.h  LoopConvert.cpp  Opcode.cpp  Opcode.h  OpcodeConsts.h  README.md  SC-CL.cpp  SC-CL.sln  SC-CL.vcxproj  SC-CL.vcxproj.filters  Script.cpp  Script.h  StaticData.cpp  StaticData.h  Utils.cpp  Utils.h  cmake_install.cmake  contributors.txt  loop-convert.vcxproj.filters
Compression/: zconf.h
Crypto/: aes256.c
Include/ClangParsing/: ASTConsumer.cpp  ASTConsumer.h  ASTFrontendAction.cpp  ASTFrontendAction.h  ASTVisitorGlobal.cpp  ASTVisitorGlobal.h  ASTVisitorLocal.cpp  ASTVisitorLocal.h  CommandLineOptions.cpp  CommandLineOptions.h  FunctionData.cpp  FunctionData.h  GlobalDecls.cpp  GlobalDecls.h  Script.cpp  Script.h  StaticData.cpp  StaticData.h
Include/ClangParsing/Helpers/: FunctionData.cpp  FunctionData.h  Script.cpp  Script.h  StaticData.cpp  StaticData.h
Include/Compiler/: BuildTarget.h  Compiler.cpp  Compiler.h  Opcode.cpp  Opcode.h  OpcodeConsts.h
Include/Compression/: SourceAnnotations.H  sal.h  xcompress.h
Include/Crypto/: aes256.c
Include/Utils/: ClangUtils.cpp  ClangUtils.h  ConsoleColor.h  ConstExpr.h  Utils.cpp  Utils.h
Include/Utils/rapidxml/: rapidxml.hpp
Include/Version/: Version.h
compiler/XscCompilerRaw/: Constants.h  PikIO.cpp  PikIO.h  Utils.cpp  Utils.h  XSC.cpp  XSC.cpp.save-failed  XSC.h  XscCompilerRaw.cbp  XscCompilerRaw.depend  XscCompilerRaw.layout  gmon.out  main.cpp
compiler/XscCompilerRaw (RDR)/: Constants.h  PikIO.cpp  PikIO.h  RSC.cpp  RSC.h  Utils.cpp  Utils.h  XscCompilerRaw.cbp  XscCompilerRaw.cscope_file_list  XscCompilerRaw.depend  XscCompilerRaw.layout  gmon.out  main.cpp
